[gd_scene load_steps=19 format=2]

[ext_resource path="res://Map/photo_2022-11-08_03-32-09.jpg" type="Texture" id=1]
[ext_resource path="res://Map/2.png" type="Texture" id=2]
[ext_resource path="res://Menu+GM/bg.plain.png" type="Texture" id=3]
[ext_resource path="res://Fonts/ArchitectsDaughter.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/levels/Map.gd" type="Script" id=5]
[ext_resource path="res://Music/Everything Goes On _ ft. Porter Robinson _ Lofi Chill.mp3" type="AudioStream" id=6]
[ext_resource path="res://Map/1.png" type="Texture" id=7]
[ext_resource path="res://Map/3.png" type="Texture" id=8]
[ext_resource path="res://Music/chime-sound-7143.mp3" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=2]
size = 23
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.686275, 0.443137, 0.776471, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.815686, 0.72549, 0.917647, 1 )
border_color = Color( 0.717647, 0.0470588, 0.694118, 1 )

[sub_resource type="DynamicFont" id=8]
size = 23
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.580392, 0.631373, 0.901961, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.690196, 0.733333, 0.964706, 1 )

[sub_resource type="DynamicFont" id=5]
size = 23
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.905882, 0.721569, 0.721569, 1 )
border_color = Color( 0.831373, 0.619608, 0.619608, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0.823529, 0.823529, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="C5B3200717E6A1015283235Df6A01F08" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 301 )
scale = Vector2( 0.797656, 0.814583 )
texture = ExtResource( 1 )

[node name="7Eaac6Bdd74453Be0B9D62199Fde2D6c" type="Sprite" parent="."]
position = Vector2( 514, 303 )
scale = Vector2( 0.712847, 0.747377 )
texture = ExtResource( 3 )

[node name="VBoxContainer4" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.0
margin_top = 238.0
margin_right = 103.0
margin_bottom = 284.0
grow_vertical = 2
custom_constants/separation = 30

[node name="back" type="Button" parent="VBoxContainer4"]
margin_right = 200.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
shortcut_in_tooltip = false
text = "Back "

[node name="bg" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 453, 313 )
scale = Vector2( 0.308036, 0.311905 )
texture = ExtResource( 7 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 581, 344 )
scale = Vector2( 0.322232, 0.324048 )
texture = ExtResource( 8 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 510, 303 )
scale = Vector2( 0.298036, 0.294435 )
texture = ExtResource( 2 )

[node name="1" type="Button" parent="."]
margin_left = 99.0
margin_top = 505.0
margin_right = 203.0
margin_bottom = 545.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
toggle_mode = true
shortcut_in_tooltip = false
text = "One"

[node name="2" type="Button" parent="."]
margin_left = 496.0
margin_top = 348.0
margin_right = 568.0
margin_bottom = 399.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
toggle_mode = true
shortcut_in_tooltip = false
text = "Two"
expand_icon = true

[node name="chime" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[connection signal="mouse_entered" from="VBoxContainer4/back" to="." method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer4/back" to="." method="_on_back_mouse_exited"]
[connection signal="pressed" from="VBoxContainer4/back" to="." method="_on_Main_menu_pressed"]
[connection signal="ready" from="bg" to="." method="_on_bg_ready"]
[connection signal="mouse_entered" from="1" to="." method="_on_1_mouse_entered"]
[connection signal="mouse_exited" from="1" to="." method="_on_1_mouse_exited"]
[connection signal="pressed" from="1" to="." method="_on_1_pressed"]
[connection signal="mouse_entered" from="2" to="." method="_on_2_mouse_entered"]
[connection signal="mouse_exited" from="2" to="." method="_on_2_mouse_exited"]
[connection signal="pressed" from="2" to="." method="_on_2_pressed"]
